syntax = "proto3";

package messages;

message PingRequest { int32 num = 1; }

message PingResponse {
  uint32 version = 1;
  int32 num = 2;
  uint32 wordsize = 3;
}

message Configuration {
  uint64 stack_trace_offset = 1;
  uint64 stack_trace_size = 2;

  uint32 backtrace_frames_skip = 3;
  uint32 backtrace_frames_count = 4;
  uint32 backtrace_resolve_symbols_count = 5;
}

message SetConfigurationRequest { Configuration configuration = 1; }

message SetConfigurationResponse {}

message GetConfigurationRequest {}

message GetConfigurationResponse { Configuration configuration = 1; }

message ClearStorageRequest {}

message ClearStorageResponse {}

message Range {
  uint64 lower = 1;
  uint64 upper = 2;
}

message Filter {
  oneof location {
    uint64 address = 1;
    Range range = 2;
  }
}

message FindRecord {
  uint32 id = 1;
  Filter filter = 2;
}

message FindRequest { repeated FindRecord records = 1; }

message StackTrace {
  uint64 stack_pointer = 1;
  uint32 wordsize = 2;
  repeated uint64 trace = 3;
}

message BackTraceSymbol {
  optional string name = 1;
  optional uint64 address = 2;
}

message BackTraceFrame {
  uint64 instruction_pointer = 1;
  uint64 stack_pointer = 2;
  optional uint64 module_base = 3;
  repeated BackTraceSymbol resolved_symbols = 4;
}

message BackTrace { repeated BackTraceFrame frames = 1; }

message Allocation {
  uint64 base_address = 1;
  uint64 size = 2;
  uint64 heap_handle = 3;
  StackTrace stack_trace = 4;
  BackTrace back_trace = 5;
}

message FoundAllocation {
  uint32 id = 1;
  repeated Allocation allocations = 2;
}

message FindResponse { repeated FoundAllocation allocations = 1; }

message Statistics {
  uint64 total_allocations = 1;
  uint64 total_reallocations = 5;
  uint64 total_deallocations = 2;
  uint64 total_deallocations_non_allocated = 3;
  uint64 allocated = 4;
}

message GetStatisticsRequest {}

message GetStatisticsResponse { Statistics statistics = 1; }

message ResetStatisticsRequest {}

message ResetStatisticsResponse {}